--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-status-bar-style"  content="black-translucent"    />
     <meta name="theme-color" content="rgb(124, 124, 124)" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon"   type="image/svg+xml" href="./assets/logoForSEO.png" />
+    <link rel="icon"   type="image/svg+xml" href="./assets/spiral-DMRL1fZE.svg" />
     <meta name="description" content="ToNote is productivity app" />
     <meta name="keywords" content="note, checklist, dashboard, productivity, online note app">
     <meta name="author" content="Koval Serhii">
