--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <!--------------------------------------------------------------------------------------------------------------------->
 <meta  property="og:title" content="ToNote"  >
 <meta  property="og:description" content="Productivity app for managing your notes, todos, dashboards, checklists"  >
-<meta  property="og:image" content="../logoForSEO.png"  >
+<meta  property="og:image" content="./assets/logoForSEO.png"  >
 <meta  property="og:url" content="https://serhiibruj.github.io/ToNoteTest/#/"  >
 
-<meta name="twitter:card" content="../logoForSEO.png">
+<meta name="twitter:card" content="./assets/logoForSEO.png">
 <meta name="twitter:title" content="ToNote">
 <meta name="twitter:description" content="Productivity app">
-<meta name="twitter:image" content="../logoForSEO.png">
+<meta name="twitter:image" content=".assets/logoForSEO.png">
 <!--------------------------------------------------------------------------------------------------------------------->
 
 <!-- Security   -->
